--- a/OOP_3/OOP_3.csproj
+++ b/OOP_3/OOP_3.csproj
@@ -134,6 +134,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="icons\Car.svg" />
+    <Content Include="icons\Human.svg" />
+    <Content Include="icons\Location.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
